--- a/environment.yml
+++ b/environment.yml
@@ -1,166 +1,143 @@
-name: torch-env
+name: breastagenet
 channels:
-  - pytorch
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_kmp_llvm
-  - blas=2.125=mkl
-  - blas-devel=3.9.0=25_linux64_mkl
-  - brotli-python=1.1.0=py310hf71b8c6_2
+  - _openmp_mutex=4.5=2_gnu
   - bzip2=1.0.8=h4bc722e_7
-  - ca-certificates=2024.8.30=hbcca054_0
-  - certifi=2024.8.30=pyhd8ed1ab_0
-  - cffi=1.17.1=py310h8deb56e_0
-  - charset-normalizer=3.4.0=pyhd8ed1ab_0
-  - cudatoolkit=11.7.1=h4bc3d14_13
-  - ffmpeg=4.3=hf484d3e_0
-  - filelock=3.16.1=pyhd8ed1ab_0
-  - freetype=2.12.1=h267a509_2
-  - gmp=6.3.0=hac33072_2
-  - gmpy2=2.1.5=py310he8512ff_2
-  - gnutls=3.6.13=h85f3911_1
-  - h2=4.1.0=pyhd8ed1ab_0
-  - hpack=4.0.0=pyh9f0ad1d_0
-  - hyperframe=6.0.1=pyhd8ed1ab_0
-  - icu=73.2=h59595ed_0
-  - idna=3.10=pyhd8ed1ab_0
-  - jinja2=3.1.4=pyhd8ed1ab_0
-  - jpeg=9e=h0b41bf4_3
-  - lame=3.100=h166bdaf_1003
-  - lcms2=2.15=hfd0df8a_0
-  - ld_impl_linux-64=2.43=h712a8e2_2
-  - lerc=4.0.0=h27087fc_0
-  - libblas=3.9.0=25_linux64_mkl
-  - libcblas=3.9.0=25_linux64_mkl
-  - libdeflate=1.17=h0b41bf4_0
-  - libffi=3.4.2=h7f98852_5
-  - libgcc=14.2.0=h77fa898_1
-  - libgcc-ng=14.2.0=h69a702a_1
-  - libgfortran=14.2.0=h69a702a_1
-  - libgfortran5=14.2.0=hd5240d6_1
-  - libhwloc=2.11.2=default_he43201b_1000
-  - libiconv=1.17=hd590300_2
-  - liblapack=3.9.0=25_linux64_mkl
-  - liblapacke=3.9.0=25_linux64_mkl
+  - ca-certificates=2025.4.26=hbd8a1cb_0
+  - ld_impl_linux-64=2.43=h712a8e2_4
+  - libblas=3.9.0=31_h59b9bed_openblas
+  - libcblas=3.9.0=31_he106b2a_openblas
+  - libexpat=2.7.0=h5888daf_0
+  - libffi=3.4.6=h2dba641_1
+  - libgcc=15.1.0=h767d61c_2
+  - libgcc-ng=15.1.0=h69a702a_2
+  - libgfortran=15.1.0=h69a702a_2
+  - libgfortran5=15.1.0=hcea5267_2
+  - libgomp=15.1.0=h767d61c_2
+  - liblapack=3.9.0=31_h7ac8fdf_openblas
+  - liblzma=5.8.1=hb9d3cd8_1
+  - liblzma-devel=5.8.1=hb9d3cd8_1
   - libnsl=2.0.1=hd590300_0
-  - libpng=1.6.43=h2797004_0
-  - libsqlite=3.46.0=hde9e2c9_0
-  - libstdcxx=14.2.0=hc0a3c3a_1
-  - libstdcxx-ng=14.2.0=h4852527_1
-  - libtiff=4.5.0=h6adf6a1_2
+  - libopenblas=0.3.29=pthreads_h94d23a6_0
+  - libsqlite=3.49.2=hee588c1_0
+  - libstdcxx=15.1.0=h8f9b012_2
+  - libstdcxx-ng=15.1.0=h4852527_2
   - libuuid=2.38.1=h0b41bf4_0
-  - libwebp-base=1.4.0=hd590300_0
-  - libxcb=1.13=h7f98852_1004
-  - libxml2=2.12.7=hc051c1a_1
-  - libzlib=1.2.13=h4ab18f5_6
-  - llvm-openmp=19.1.4=h024ca30_0
-  - markupsafe=3.0.2=py310h89163eb_0
-  - mkl=2024.2.2=ha957f24_16
-  - mkl-devel=2024.2.2=ha770c72_16
-  - mkl-include=2024.2.2=ha957f24_16
-  - mpc=1.3.1=h24ddda3_1
-  - mpfr=4.2.1=h90cbb55_3
-  - mpmath=1.3.0=pyhd8ed1ab_0
-  - ncurses=6.5=he02047a_1
-  - nettle=3.6=he412f7d_0
-  - networkx=3.4.2=pyh267e887_2
-  - openh264=2.1.1=h780b84a_0
-  - openjpeg=2.5.0=hfec8fc6_2
-  - openssl=3.4.0=hb9d3cd8_0
-  - pip=24.3.1=pyh8b19718_0
-  - pthread-stubs=0.4=hb9d3cd8_1002
-  - pycparser=2.22=pyhd8ed1ab_0
-  - pysocks=1.7.1=pyha2e5f31_6
-  - python=3.10.12=hd12c33a_0_cpython
-  - python_abi=3.10=5_cp310
-  - pytorch-mutex=1.0=cpu
-  - readline=8.2=h8228510_1
-  - requests=2.32.3=pyhd8ed1ab_0
-  - tbb=2021.13.0=hceb3a55_1
+  - libxcrypt=4.4.36=hd590300_1
+  - libzlib=1.3.1=hb9d3cd8_2
+  - ncurses=6.5=h2d0b736_3
+  - numpy=1.26.4=py310hb13e2d6_0
+  - openssl=3.5.0=h7b32b05_1
+  - pandas=2.2.3=py310h5eaa309_3
+  - pip=25.1.1=pyh8b19718_0
+  - python=3.10.17=hd6af730_0_cpython
+  - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-tzdata=2025.2=pyhd8ed1ab_0
+  - python_abi=3.10=6_cp310
+  - pytz=2025.2=pyhd8ed1ab_0
+  - readline=8.2=h8c095d6_2
+  - setuptools=80.1.0=pyhff2d567_0
+  - six=1.17.0=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
-  - torchaudio=2.0.2=py310_cpu
-  - typing_extensions=4.12.2=pyha770c72_0
-  - urllib3=2.2.3=pyhd8ed1ab_0
-  - wheel=0.45.1=pyhd8ed1ab_0
-  - xorg-libxau=1.0.11=hb9d3cd8_1
-  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
-  - xz=5.2.6=h166bdaf_0
-  - zlib=1.2.13=h4ab18f5_6
-  - zstandard=0.23.0=py310ha39cb0e_1
-  - zstd=1.5.6=ha6fb4c9_0
+  - tzdata=2025b=h78e105d_0
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - xz=5.8.1=hbcc6ac9_1
+  - xz-gpl-tools=5.8.1=hbcc6ac9_1
+  - xz-tools=5.8.1=hb9d3cd8_1
   - pip:
-    - annotated-types==0.7.0
-    - blis==1.0.1
-    - catalogue==2.0.10
-    - click==8.1.7
-    - cloudpathlib==0.20.0
-    - confection==0.1.5
-    - contourpy==1.3.1
-    - cycler==0.12.1
-    - cymem==2.0.10
-    - fastai==2.7.18
-    - fastcore==1.7.22
-    - fastdownload==0.0.7
-    - fastprogress==1.0.3
-    - fonttools==4.55.0
-    - fsspec==2024.10.0
-    - h5py==3.12.1
-    - joblib==1.4.2
-    - kiwisolver==1.4.7
-    - langcodes==3.5.0
-    - language-data==1.3.0
-    - marisa-trie==1.2.1
-    - markdown-it-py==3.0.0
-    - matplotlib==3.9.3
-    - mdurl==0.1.2
-    - murmurhash==1.0.11
-    - numpy==2.0.2
-    - nvidia-cublas-cu12==12.4.5.8
-    - nvidia-cuda-cupti-cu12==12.4.127
-    - nvidia-cuda-nvrtc-cu12==12.4.127
-    - nvidia-cuda-runtime-cu12==12.4.127
-    - nvidia-cudnn-cu12==9.1.0.70
-    - nvidia-cufft-cu12==11.2.1.3
-    - nvidia-curand-cu12==10.3.5.147
-    - nvidia-cusolver-cu12==11.6.1.9
-    - nvidia-cusparse-cu12==12.3.1.170
-    - nvidia-nccl-cu12==2.21.5
-    - nvidia-nvjitlink-cu12==12.4.127
-    - nvidia-nvtx-cu12==12.4.127
-    - packaging==24.2
-    - pandas==2.2.3
-    - pillow==11.0.0
-    - preshed==3.0.9
-    - pydantic==2.10.2
-    - pydantic-core==2.27.1
-    - pygments==2.18.0
-    - pyparsing==3.2.0
-    - python-dateutil==2.9.0.post0
-    - pytz==2024.2
-    - pyyaml==6.0.2
-    - rich==13.9.4
-    - scikit-learn==1.5.2
-    - scipy==1.14.1
-    - setuptools==75.6.0
-    - shellingham==1.5.4
-    - six==1.16.0
-    - smart-open==7.0.5
-    - spacy==3.8.2
-    - spacy-legacy==3.0.12
-    - spacy-loggers==1.0.5
-    - srsly==2.4.8
-    - sympy==1.13.1
-    - thinc==8.3.2
-    - threadpoolctl==3.5.0
-    - torch==2.5.1
-    - torchvision==0.20.1
-    - tqdm==4.67.1
-    - triton==3.1.0
-    - typer==0.14.0
-    - tzdata==2024.2
-    - wasabi==1.1.3
-    - weasel==0.4.1
-    - wrapt==1.17.0
-prefix: /scratch_tmp/users/k21066795/conda/torch-env
+      - annotated-types==0.7.0
+      - antlr4-python3-runtime==4.9.3
+      - beartype==0.20.2
+      - blis==1.3.0
+      - catalogue==2.0.10
+      - certifi==2025.4.26
+      - cffi==1.17.1
+      - charset-normalizer==3.4.2
+      - click==8.2.0
+      - cloudpathlib==0.21.0
+      - cloudpickle==3.1.1
+      - cmake==4.0.2
+      - confection==0.1.5
+      - cymem==2.0.11
+      - fastai==2.8.1
+      - fastcore==1.8.2
+      - fastdownload==0.0.7
+      - fastprogress==1.0.3
+      - fasttransform==0.0.2
+      - filelock==3.18.0
+      - fsspec==2025.3.2
+      - geopandas==1.0.1
+      - hf-xet==1.1.0
+      - huggingface-hub==0.31.1
+      - hydra-core==1.3.2
+      - idna==3.10
+      - ipywidgets==8.1.7
+      - jinja2==3.1.6
+      - jupyter==1.1.1
+      - jupyter-console==6.6.3
+      - jupyterlab==4.4.2
+      - jupyterlab-widgets==3.0.15
+      - langcodes==3.5.0
+      - language-data==1.3.0
+      - lit==18.1.8
+      - marisa-trie==1.2.1
+      - markupsafe==3.0.2
+      - murmurhash==1.0.12
+      - notebook==7.4.2
+      - nvidia-cublas-cu11==11.10.3.66
+      - nvidia-cuda-cupti-cu11==11.7.101
+      - nvidia-cuda-nvrtc-cu11==11.7.99
+      - nvidia-cuda-runtime-cu11==11.7.99
+      - nvidia-cudnn-cu11==8.5.0.96
+      - nvidia-cufft-cu11==10.9.0.58
+      - nvidia-curand-cu11==10.2.10.91
+      - nvidia-cusolver-cu11==11.4.0.1
+      - nvidia-cusparse-cu11==11.7.4.91
+      - nvidia-nccl-cu11==2.14.3
+      - nvidia-nvtx-cu11==11.7.91
+      - omegaconf==2.3.0
+      - opencv-python==4.11.0.86
+      - packaging==25.0
+      - plum-dispatch==2.5.7
+      - preshed==3.0.9
+      - pycparser==2.22
+      - pydantic==2.11.4
+      - pydantic-core==2.33.2
+      - pyogrio==0.11.0
+      - pyproj==3.7.1
+      - pysankey==0.0.1
+      - pyyaml==6.0.2
+      - regex==2024.11.6
+      - requests==2.32.3
+      - safetensors==0.5.3
+      - scikit-learn==1.6.1
+      - scipy==1.15.3
+      - shapely==2.1.0
+      - shellingham==1.5.4
+      - smart-open==7.1.0
+      - spacy==3.8.5
+      - spacy-legacy==3.0.12
+      - spacy-loggers==1.0.5
+      - spams-bin==2.6.12
+      - srsly==2.5.1
+      - staintools==2.1.2
+      - thinc==8.3.6
+      - timm==1.0.15
+      - tokenizers==0.13.3
+      - torch==2.0.1
+      - torchaudio==2.0.2
+      - torchvision==0.15.2
+      - tqdm==4.67.1
+      - transformers==4.29.2
+      - triton==2.0.0
+      - typer==0.15.3
+      - typing-extensions==4.13.2
+      - typing-inspection==0.4.0
+      - urllib3==2.4.0
+      - wasabi==1.1.3
+      - weasel==0.4.1
+      - widgetsnbextension==4.0.14
+      - wrapt==1.17.2
