--- a/environment.yml
+++ b/environment.yml
@@ -6,10 +6,19 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.34.5=hb9d3cd8_0
   - ca-certificates=2025.4.26=hbd8a1cb_0
+  - cpp-expected=1.1.0=hff21bea_1
+  - fmt=11.1.4=h07f6e7f_1
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.3=h659f571_0
   - ld_impl_linux-64=2.43=h712a8e2_4
+  - libarchive=3.7.7=h75ea233_4
   - libblas=3.9.0=31_h59b9bed_openblas
   - libcblas=3.9.0=31_he106b2a_openblas
+  - libcurl=8.13.0=h332b0f4_0
+  - libedit=3.1.20250104=pl5321h7949ede_0
+  - libev=4.33=hd590300_2
   - libexpat=2.7.0=h5888daf_0
   - libffi=3.4.6=h2dba641_1
   - libgcc=15.1.0=h767d61c_2
@@ -17,21 +26,29 @@ dependencies:
   - libgfortran=15.1.0=h69a702a_2
   - libgfortran5=15.1.0=hcea5267_2
   - libgomp=15.1.0=h767d61c_2
+  - libiconv=1.18=h4ce23a2_1
   - liblapack=3.9.0=31_h7ac8fdf_openblas
   - liblzma=5.8.1=hb9d3cd8_1
   - liblzma-devel=5.8.1=hb9d3cd8_1
+  - libmamba=2.1.1=h430c389_0
+  - libnghttp2=1.64.0=h161d5f1_0
   - libnsl=2.0.1=hd590300_0
   - libopenblas=0.3.29=pthreads_h94d23a6_0
+  - libsolv=0.7.32=h7955e40_2
   - libsqlite=3.49.2=hee588c1_0
+  - libssh2=1.11.1=hcf80075_0
   - libstdcxx=15.1.0=h8f9b012_2
   - libstdcxx-ng=15.1.0=h4852527_2
   - libuuid=2.38.1=h0b41bf4_0
   - libxcrypt=4.4.36=hd590300_1
+  - libxml2=2.13.8=h81593ed_0
   - libzlib=1.3.1=hb9d3cd8_2
+  - lz4-c=1.10.0=h5888daf_1
+  - lzo=2.10=hd590300_1001
+  - mamba=2.1.1=had4a41a_0
   - ncurses=6.5=h2d0b736_3
-  - numpy=1.26.4=py310hb13e2d6_0
+  - nlohmann_json=3.11.3=he02047a_1
   - openssl=3.5.0=h7b32b05_1
-  - pandas=2.2.3=py310h5eaa309_3
   - pip=25.1.1=pyh8b19718_0
   - python=3.10.17=hd6af730_0_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
@@ -39,7 +56,10 @@ dependencies:
   - python_abi=3.10=6_cp310
   - pytz=2025.2=pyhd8ed1ab_0
   - readline=8.2=h8c095d6_2
+  - reproc=14.2.5.post0=hb9d3cd8_0
+  - reproc-cpp=14.2.5.post0=h5888daf_0
   - setuptools=80.1.0=pyhff2d567_0
+  - simdjson=3.12.3=h84d6215_0
   - six=1.17.0=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
   - tzdata=2025b=h78e105d_0
@@ -47,6 +67,8 @@ dependencies:
   - xz=5.8.1=hbcc6ac9_1
   - xz-gpl-tools=5.8.1=hbcc6ac9_1
   - xz-tools=5.8.1=hb9d3cd8_1
+  - yaml-cpp=0.8.0=h3f2d84a_0
+  - zstd=1.5.7=hb8e6e7a_2
   - pip:
       - annotated-types==0.7.0
       - antlr4-python3-runtime==4.9.3
@@ -87,6 +109,7 @@ dependencies:
       - markupsafe==3.0.2
       - murmurhash==1.0.12
       - notebook==7.4.2
+      - numpy==1.26.4
       - nvidia-cublas-cu11==11.10.3.66
       - nvidia-cuda-cupti-cu11==11.7.101
       - nvidia-cuda-nvrtc-cu11==11.7.99
