--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,8 +1,15 @@
-WSIs: "/scratch/prj/cb_normalbreast/prj_BreastAgeNet/WSIs"
-FEATURES: "/scratch/prj/cb_normalbreast/prj_BreastAgeNet/FEATURES"
-resFolder: "/scratch/prj/cb_histology_data/Siyuan/Docker_test/breastagenet/examples/RESULTs/main"
-split_ratio: 0.8
+task: "train_cv"
+clinic_path: ""
+FEATURES: ""
+resFolder: ""
+
+model_name: "UNI" 
+attention: "MultiHeadAttention"
 stainFunc: "augmentation"
+TC_epi: 0.9
+bag_size: 250 
+
+split_ratio: 0.8
 aug_prob: 0.5
 n_classes: 3
 n_heads: 8
@@ -14,3 +21,5 @@ lr: 0.00001
 weight_decay: 0.00005
 patience: 10
 max_epochs: 200
+
+ckpt_pt: ""
